--- a/app/src/main/res/layout/bottom_sheet_alignment_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_alignment_dialog.xml
@@ -1,57 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dialog_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    android:id="@+id/dialog_background">
+    android:background="@android:color/transparent">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_margin="12dp"
         android:background="@android:color/transparent"
-        android:layout_margin="12dp">
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="12dp"
-            android:textSize="@dimen/text_super_large"
             android:id="@+id/alignment_title"
-            style="@style/TextDefaultStyle">
+            style="@style/TextDefaultStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="12dp"
+            android:textSize="@dimen/text_super_large">
 
         </androidx.appcompat.widget.AppCompatTextView>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="12dp"
-            android:textSize="@dimen/text_large"
-            android:text="@string/bottom_alignment_star"
             android:id="@+id/alignment_star"
-            style="@style/TextDefaultStyle">
+            style="@style/TextDefaultStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="12dp"
+            android:text="@string/bottom_alignment_star"
+            android:textSize="@dimen/text_large">
 
         </androidx.appcompat.widget.AppCompatTextView>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="12dp"
-            android:textSize="@dimen/text_large"
-            android:text="@string/bottom_alignment_center"
             android:id="@+id/alignment_center"
-            style="@style/TextDefaultStyle">
+            style="@style/TextDefaultStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="12dp"
+            android:text="@string/bottom_alignment_center"
+            android:textSize="@dimen/text_large">
 
         </androidx.appcompat.widget.AppCompatTextView>
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/alignment_end"
+            style="@style/TextDefaultStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="12dp"
-            android:textSize="@dimen/text_large"
             android:text="@string/bottom_alignment_end"
-            android:id="@+id/alignment_end"
-            style="@style/TextDefaultStyle">
+            android:textSize="@dimen/text_large">
 
         </androidx.appcompat.widget.AppCompatTextView>
 
