--- a/app/src/main/res/layout/bottomsheetdialog_alignment_settings.xml
+++ b/app/src/main/res/layout/bottomsheetdialog_alignment_settings.xml
@@ -13,6 +13,7 @@
         tools:ignore="MissingConstraints">
 
         <androidx.appcompat.widget.AppCompatTextView
+            style="@style/TextDefaultStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
@@ -21,8 +22,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            style="@style/TextDefaultStyle"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/bottom_alignment_date_view"
@@ -47,19 +47,18 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_date_text_size"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
-                android:gravity="left|center"
                 android:background="@android:color/transparent"
+                android:gravity="left|center"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle"/>
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
-
 
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -85,16 +84,16 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_time_text_size"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
-                android:gravity="left|center"
                 android:background="@android:color/transparent"
+                android:gravity="left|center"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle"/>
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -121,16 +120,16 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_app_text_size"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
-                android:gravity="left|center"
                 android:background="@android:color/transparent"
+                android:gravity="left|center"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle"/>
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -157,16 +156,16 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_word_text_size"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
-                android:gravity="left|center"
                 android:background="@android:color/transparent"
+                android:gravity="left|center"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle"/>
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
