--- a/app/src/main/res/layout/bottomsheetdialog_color_settings.xml
+++ b/app/src/main/res/layout/bottomsheetdialog_color_settings.xml
@@ -13,6 +13,7 @@
         tools:ignore="MissingConstraints">
 
         <androidx.appcompat.widget.AppCompatTextView
+            style="@style/TextDefaultStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
@@ -21,8 +22,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            style="@style/TextDefaultStyle" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/bottom_color_date_view"
@@ -47,16 +47,16 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_date_text_color"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
-                android:gravity="left|center"
                 android:background="@android:color/transparent"
+                android:gravity="left|center"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle" />
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -84,16 +84,16 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_time_text_color"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
-                android:gravity="left|center"
                 android:background="@android:color/transparent"
+                android:gravity="left|center"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle" />
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -120,16 +120,16 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_app_text_color"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
-                android:textSize="@dimen/text_large"
                 android:gravity="left|center"
-                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="@dimen/text_large"
                 app:layout_constraintBottom_toBottomOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -156,16 +156,16 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_battery_text_color"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
-                android:textSize="@dimen/text_large"
                 android:gravity="left|center"
-                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="@dimen/text_large"
                 app:layout_constraintBottom_toBottomOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -192,16 +192,16 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_word_text_color"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
-                android:textSize="@dimen/text_large"
                 android:gravity="left|center"
-                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="@dimen/text_large"
                 app:layout_constraintBottom_toBottomOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -228,16 +228,16 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_widget_background_color"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
-                android:textSize="@dimen/text_large"
                 android:gravity="left|center"
-                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="@dimen/text_large"
                 app:layout_constraintBottom_toBottomOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -264,16 +264,16 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_widget_text_color"
+                style="@style/TextDefaultStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
-                android:textSize="@dimen/text_large"
                 android:gravity="left|center"
-                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="@dimen/text_large"
                 app:layout_constraintBottom_toBottomOf="parent"
-                tools:ignore="RtlHardcoded"
-                style="@style/TextDefaultStyle" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlHardcoded" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
