--- a/app/src/main/res/layout/bottomsheetdialog_padding_settings.xml
+++ b/app/src/main/res/layout/bottomsheetdialog_padding_settings.xml
@@ -14,6 +14,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/textSizeSave"
+            style="@style/TextDefaultStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
@@ -22,8 +23,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            style="@style/TextDefaultStyle" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
