--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -2,18 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/draw_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/draw_background"
     tools:context=".ui.drawer.DrawFragment">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/mainView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="32dp"
-        android:layout_marginHorizontal="20dp">
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/searchViewContainer"
@@ -38,8 +38,8 @@
                 app:closeIcon="@null"
                 app:iconifiedByDefault="false"
                 app:queryBackground="@null"
-                app:searchIcon="@null"
                 app:queryHint="@string/search"
+                app:searchIcon="@null"
                 tools:ignore="VisualLintTextFieldSize" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
