--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -24,6 +24,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/appFavorite_name"
+            style="@style/TextDefaultStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
@@ -32,8 +33,7 @@
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="RtlHardcoded"
-            style="@style/TextDefaultStyle" />
+            tools:ignore="RtlHardcoded" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/appFavorite_drag_icon"
