--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -13,18 +13,10 @@
         tools:ignore="MissingConstraints">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/appHomeDots_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:layout_marginEnd="10dp"
-            android:visibility="gone" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/appHomeLeft_icon"
+            android:id="@+id/appHome_icon"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginTop="1dp"
             android:visibility="gone" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -35,13 +27,6 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="24sp" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/appHomeRight_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="10dp"
-            android:visibility="gone" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.constraintlayout.widget.ConstraintLayout>
