--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -103,4 +103,15 @@
 
     </com.github.droidworksstudio.launcher.view.GestureNestedScrollView>
 
+    <!-- Floating Action Button (Hover Button) -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="32dp"
+        android:src="@drawable/app_launcher"
+        app:backgroundTint="@color/search_button_background"
+        app:fabSize="normal" />
+
 </FrameLayout>
