--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,6 +36,9 @@
             android:id="@+id/action_SettingsFragment_to_FavoriteFragment"
             app:destination="@id/FavoriteFragment" />
         <action
+            android:id="@+id/action_SettingsFragment_to_AdvancedSettingsFragment"
+            app:destination="@id/AdvancedSettingsFragment" />
+        <action
             android:id="@+id/action_SettingsFragment_to_HiddenFragment"
             app:destination="@id/HiddenFragment" />
         <action
@@ -71,6 +74,12 @@
         android:name="com.github.droidworksstudio.launcher.ui.favorite.FavoriteFragment"
         android:label="@string/favorite_fragment_label"
         tools:layout="@layout/fragment_favorite" />
+
+    <fragment
+        android:id="@+id/AdvancedSettingsFragment"
+        android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsAdvancedFragment"
+        android:label="@string/favorite_fragment_label"
+        tools:layout="@layout/fragment_settings_advanced" />
 
     <fragment
         android:id="@+id/HiddenFragment"
