--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -150,6 +150,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/communitySupport"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -189,7 +190,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_marginEnd="16dp"
-                        android:contentDescription="@string/app_name"
+                        android:contentDescription="@string/advanced_settings"
                         android:src="@drawable/ic_advanced" />
 
                     <LinearLayout
@@ -200,7 +201,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Advanced"
+                            android:text="@string/advanced_settings"
                             android:textColor="@android:color/white"
                             android:textSize="18sp" />
                     </LinearLayout>
